css/app.css
/* ... */
a:hover .icon.out-link   { background-position: -500px -14px;}

.icon.plus-dark    { background-position: -240px -40px;}

/* Universal preset icons */

.icon.source     { background-position:   0 -200px;}
.icon.address    { background-position: -20px -200px;}
.icon.telephone  { background-position: -40px -200px;}
.icon.website    { background-position: -60px -200px;}
.icon.elevation  { background-position: -80px -200px;}
.icon.wikipedia  { background-position: -100px -200px;}
.icon.note       { background-position: -120px -200px;}
.icon.wheelchair { background-position: -140px -200px;}

/* ToolBar / Persistent UI Elements
------------------------------------------------------- */

#bar {
    position: fixed;
    padding: 10px 0;
    left:0;
    top:0;
    right:0;
    height:60px;
    z-index: 1;
    min-width: 768px;
}

/* Header for modals / panes
------------------------------------------------------- */

.header {
    border-bottom: 1px solid #ccc;
    height: 60px;
    position: relative;
}

.header h3 {
    text-align: left;
    margin-bottom: 0;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    padding: 20px;
}

.header button,
.modal > button {
    border-radius: 0;
    width: 40px;
    text-align: center;
    overflow: hidden;
}

.header button {
    position: relative;
    height: 100%;
}

.preset-list-pane .header button {
    position: absolute;
    right: 0;
    top: 0;
}

.modal > button {
    position: absolute;
    right: 0;
    top: 0;
    height: 59px;
    z-index: 3;
}

.footer {
    position: absolute;
    bottom: 0;
    padding: 5px 20px 5px 20px;
    border-top: 1px solid #ccc;
    background-color: #fafafa;
    width: 100%;
}

.sidebar-component .body {
    width: 100%;
    overflow: auto;
    top: 60px;
    bottom: 0;
    position: absolute;
}

/* Inspector
------------------------------------------------------- */

#sidebar {
    position: relative;
    float: left;
    height: 100%;
    overflow: hidden;
    z-index: 10;
    background: #f6f6f6;
}

.sidebar-component {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
}

.inspector-wrap {
    width: 100%;
    height: 100%;
}

.inspector-hidden {
    display: none;
}

.inspector-body {
    overflow-y: scroll;
    overflow-x: hidden;
    position: absolute;
    right: 0;
    left: 0;
    bottom: 0;
}

.mapillary-image {
    position: absolute;
    right: 0;
    bottom: 30px;
    width: 330px;
    height: 250px;
    padding: 5px;
    background-color: #fff;
}

.mapillary-image a {
    display: block;
    position: absolute;
    height: auto;
    background-color: rgba(0,0,0,.5);
    bottom: 0;
    right: 0;
    padding: 5px 10px;
}

.mapillary-image img {
    width: 100%;
    height: auto;
    display: block;
}

.mapillary-image.hidden {
    visibility: hidden;
}

.mapillary-image.temp button {
    display: none;
}

.mapillary-image button {
    border-radius: 0;
    padding: 5px;
    position: absolute;
    right: 0;
    top: 0;
}

.feature-list-pane .inspector-body {
    top: 120px;
}

.preset-list-pane .inspector-body {
    top: 120px;
}

.entity-editor-pane .inspector-body {
    top: 60px;
}

.selection-list-pane .inspector-body {
    top: 60px;
}

.inspector-inner {
    padding: 20px;
    position: relative;
}

#sidebar .search-header .icon {
    display: block;
    position: absolute;
    left: 10px;
    top: 80px;
    pointer-events: none;
}

#sidebar .search-header input {
    position: absolute;
    top: 60px;
    height: 60px;
    width: 100%;
    padding: 5px 10px;
    border-radius: 0;
    border-width: 0;
    border-bottom-width: 1px;
    text-indent: 30px;
    font-size: 18px;
    font-weight: bold;
}

/* Feature list */

.feature-list  {
    width:100%;
}

.no-results-item,
.geocode-item,
.feature-list-item {
    width: 100%;
    position: relative;
    border-bottom: 1px solid #ccc;
    border-radius: 0;
}

.feature-list-item .label {
    text-align: left;
    padding: 5px 10px;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    border-left: 1px solid rgba(0, 0, 0, .1);
}

.feature-list-item .label .icon {
    opacity: .5;
}

.feature-list-item:hover .label {
    background-color: #ececec;
}

.feature-list-item .entity-type {
    color:#7092ff;
}

.feature-list-item:hover .entity-type {
    color:#597be7;
}

.feature-list-item .entity-name {
    font-weight: normal;
    color: #666;
    padding-left: 10px;
}

/* Presets
------------------------------------------------------- */

/* Preset grid  */

.preset-list  {
    width:100%;
    padding: 20px 20px 10px 20px;
    border-bottom: 1px solid #ccc;
}

.preset-list-button-wrap {
    position: relative;
    margin-bottom: 10px;
    height: 60px;
}

.preset-list-button {
    width: 100%;
    height: 100%;
    position: relative;
    border: 1px solid #ccc;
}

.preset-list.filtered .preset-list-item:first-child .preset-list-button {
    background: #ececec;
}

.preset-icon {
    position: absolute;
    top: 17px;
    left: 17px;
    margin: auto;
}

.preset-icon-line,
.preset-icon-relation {
    top: 0;
    left: 0;
}

.preset-list-button .label {
    background-color: #f6f6f6;
    text-align: left;
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    padding: 5px 10px;
    left: 60px;
    line-height: 50px;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    border-left: 1px solid rgba(0, 0, 0, .1);
    border-radius: 0 3px 3px 0;
    }

.preset-list-button:hover .label {
    background-color: #ececec;
}

.preset-list-item button.tag-reference-button {
    height: 100%;
    border: 1px solid #CCC;
    border-radius: 0 3px 3px 0;
    position: absolute;
    top: 0;
    right: 0;
    width: 10%;
    background: #fafafa;
}

.preset-list-item button.tag-reference-button .icon {
    opacity: .5;
}

.current .preset-list-button,
.current .preset-list-button .label {
    background-color: #E8EBFF;
}
/* ... */

